--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -30,7 +30,11 @@
         </activity>
         <activity
             android:name=".LoginActivity"
-            android:label="@string/title_activity_login"></activity>
+            android:label="@string/title_activity_login" />
+        <activity android:name=".RegisterActivity"
+                    android:label="用户注册"
+            android:parentActivityName=".LoginActivity">
+        </activity>
     </application>
 
 </manifest>
