--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <application
         android:name="zyzzz.imudges.com.Application.MyApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/meike"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -35,14 +35,15 @@
             android:name=".RegisterActivity"
             android:label="用户注册"
             android:parentActivityName=".LoginActivity" />
-        <activity android:name=".UserSettingActivity"
+        <activity
+            android:name=".UserSettingActivity"
             android:label="用户信息"
-            android:parentActivityName=".MainActivity"
-            />
-        <activity android:name=".LessonActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".LessonActivity"
             android:label="课节列表"
-            android:parentActivityName=".MainActivity">
-        </activity>
+            android:parentActivityName=".MainActivity"></activity>
+        <activity android:name=".VideoActivity"></activity>
     </application>
 
 </manifest>
