--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'org.xutils:xutils:3.5.0'
+    compile 'fm.jiecao:jiecaovideoplayer:3.6.1'
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
