--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -42,8 +42,9 @@
         <activity
             android:name=".LessonActivity"
             android:label="课节列表"
-            android:parentActivityName=".MainActivity"></activity>
-        <activity android:name=".VideoActivity"></activity>
+            android:parentActivityName=".MainActivity" />
+        <activity android:name=".VideoActivity" />
+        <activity android:name=".SettingActivity"></activity>
     </application>
 
 </manifest>
